# notion-gcal-sync

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  vova-deployment.md
app/: config.py  exceptions.py  gcal_client.py  hashing.py  logging_utils.py  main.py  models.py  notion_client.py  state_store.py  sync.py
scripts/: get_google_refresh_token.py
tests/: test_gcal_client.py  test_hashing.py  test_models.py  test_state_store.py  test_sync_mapping.py  test_webhook_integration.py
