[project]
name = "notion-gcal-sync"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "google-api-python-client",
    "google-auth",
    "google-auth-oauthlib",
    "google-cloud-firestore>=2.27.0",
    "notion-client",
    "psycopg[binary]",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
default-groups = ["dev"]
